Fixing site not taking full screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,12 @@ body::after{
    position:absolute; width:0; height:0; overflow:hidden; z-index:-1; 
    content:url(../img/liste_logo_hover.png) url(../img/programme_logo_hover.png) url(../img/fil_rouge_logo_hover.png); 
 }
-html {
+body, html {
+  height: 100%;
   scroll-behavior: smooth;
 }
 section {
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
 }
 
@@ -27,7 +28,7 @@ section {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   text-align: center;
 }
 #sec-2 {
